Potential fix of IE stretching emblem vertically

--- a/css/style.css
+++ b/css/style.css
@@ -144,6 +144,7 @@ select:-webkit-autofill:focus {
 
 .logo {
 	max-width: 200px;
+	max-height: 200px;
 	display: block;
 	margin: 0 auto 30px auto
 }
